--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -8,6 +8,7 @@
 \newcommand{\colorable}[1]{\(#1\)-colorable}
 \newcommand{\chromatic}[1]{\(#1\)-chromatic}
 \newcommand{\X}{\chi}
+\newcommand{\SG}{\mathscr{G}}
 \newtheorem{proposition}{Proposition}
 \begin{document}
 
