--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -1,7 +1,27 @@
 @book{chartrand,
-author="G. Chartrand and P. Zhang",
+author="Chartrand, Gary and Zhang, Ping",
 title="A First Course in Graph Theory",
 publisher="Dover Publications",
 address="Mineola, New York",
 year=2012
 }
+
+@article{hopcroft,
+ author = {Hopcroft, John and Tarjan, Robert},
+ title = {Algorithm 447: Efficient Algorithms for Graph Manipulation},
+ journal = {Commun. ACM},
+ issue_date = {June 1973},
+ volume = {16},
+ number = {6},
+ month = jun,
+ year = {1973},
+ issn = {0001-0782},
+ pages = {372--378},
+ numpages = {7},
+ url = {http://doi.acm.org/10.1145/362248.362272},
+ doi = {10.1145/362248.362272},
+ acmid = {362272},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {analysis of algorithms, graph manipulation, graphs},
+} 
