--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -9,6 +9,7 @@
 \newcommand{\chromatic}[1]{\(#1\)-chromatic}
 \newcommand{\X}{\chi}
 \newcommand{\SG}{\mathscr{G}}
+\newcommand{\BO}{\mathcal{O}}
 \newtheorem{proposition}{Proposition}
 \begin{document}
 
