--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -8,6 +8,8 @@
 \newcommand{\colorable}[1]{\(#1\)-colorable}
 \newcommand{\chromatic}[1]{\(#1\)-chromatic}
 \newcommand{\X}{\chi}
+\renewcommand{\d}{\delta}
+\newcommand{\D}{\Delta}
 \newcommand{\SG}{\mathscr{G}}
 \newcommand{\BO}{\mathcal{O}}
 \newtheorem{proposition}{Proposition}
